k8s/dust-kube/network-policies/core-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-network-policy
spec:
  podSelector:
    matchLabels:
      app: core
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front
        - podSelector:
            matchLabels:
              app: front-worker
        - podSelector:
            matchLabels:
              app: upsert-table-worker
        - podSelector:
            matchLabels:
              app: front-edge
        - podSelector:
            matchLabels:
              app: front-qa
        - podSelector:
            matchLabels:
              app: core-sqlite-worker
        - podSelector:
            matchLabels:
              app: prodbox
      ports:
        - protocol: TCP
          port: 3001
