k8s/dust-kube/network-policies/oauth-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oauth-network-policy
spec:
  podSelector:
    matchLabels:
      app: oauth
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front
        - podSelector:
            matchLabels:
              app: front-edge
        - podSelector:
            matchLabels:
              app: front-qa
        - podSelector:
            matchLabels:
              app: connectors
        - podSelector:
            matchLabels:
              app: connectors-worker
        - podSelector:
            matchLabels:
              app: front-worker
        - podSelector:
            matchLabels:
              app: prodbox
        - podSelector:
            matchLabels:
              app: core
    - podSelector:
        matchExpressions:
          - key: app.kubernetes.io/name
            operator: In
            values:
              - connectors
              - connectors-worker
              - connectors-worker-google-drive
              - connectors-worker-notion
              - connectors-worker-notion-gc
              - connectors-worker-webcrawler
              - connectors-worker-zendesk
      ports:
        - protocol: TCP
          port: 3006
